--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,7 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+
   "projects": {
     "QRUD-LATEST": {
       "projectType": "application",
@@ -104,7 +105,14 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "ghPages": {
+              "branch": "gh-pages",
+              "repo": "https://github.com/bryanmsombra27/QRUD.git",
+              "message": "Deployed from CI"
+            }
+          }
         }
       }
     }
