config angular.json to deploy the app

--- a/angular.json
+++ b/angular.json
@@ -41,6 +41,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/QRUD-LATEST/",
               "budgets": [
                 {
                   "type": "initial",
