--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,13 +31,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: "."
+
       - name: Setup node.js
         uses: actions/setup-node@v4
         with:
@@ -45,12 +39,17 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
       - name: Build Angular app
         run: npm run build
+
+      # - name: Setup Pages
+      #   uses: actions/configure-pages@v5
+      - name: Upload dist folder
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist/qrud-latest/browser
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
-          branch: main
-          folder: /home/runner/work/QRUD/QRUD/dist/qrud-latest/browser/
