--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
         run: npm install
 
       - name: Build Angular app
-        run: npm run build
+        run: npm run build -- --configuration=production
 
       # - name: Setup Pages
       #   uses: actions/configure-pages@v5
