--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Upload dist folder
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist/qrud-latest/browser
+          path: dist/qrud/browser
 
       - name: Deploy to GitHub Pages
         id: deployment
