--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "baseHref": "/QRUD-LATEST/",
+            "baseHref": "/QRUD/",
             "outputPath": "dist/qrud-latest",
             "index": "src/index.html",
             "browser": "src/main.ts",
