--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "baseHref": "/QRUD/",
-            "outputPath": "dist/qrud-latest",
+            "outputPath": "dist/qrud",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
